--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>&lrm;</title>
-    <link rel="icon" href="/images/favicon2.ico" type="image/x-icon">
-    <link rel="stylesheet" href="/css/style.css">
+    <link rel="icon" href="images/favicon2.ico" type="image/x-icon">
+    <link rel="stylesheet" href="css/style.css">
     <script type="importmap">
         {
           "imports": {
@@ -16,7 +16,7 @@
       </script>
 </head>
 <body>
-    <script type="module" src="/js/main.js"></script>
+    <script type="module" src="js/main.js"></script>
         <div id="universe"></div>
     </header>
 </body>
