--- a/index.html
+++ b/index.html
@@ -9,7 +9,8 @@
 </head>
 <body>
     <script type="module" src="js/main.js"></script>
-        <div id="universe"></div>
+        <div id="universe">
+        </div>
     </header>
 </body>
 </html>
